fixed middle alignment

--- a/entry-9/style.css
+++ b/entry-9/style.css
@@ -107,8 +107,8 @@ nav{
             flex-flow: row;
             flex-direction: row;
             align-content: center;
-            margin-bottom: 15px;
-            margin-left: -29px;
+            margin-bottom: 25px;
+            margin-left: px;
             overflow-y: auto;
           }
           
